k8s/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment 
  labels:
    app: api
spec: 
  replicas: 1
  selector: 
    matchLabels: 
      app: api
  template: 
    metadata: 
      labels: 
        app: api
    spec: 
      containers: 
        - name: api
          image: skogrv/hive:develop-latest
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: api-service
spec:
  type: ClusterIP
  selector:
    app: api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
