k8s/api-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec: 
  ingressClassName: nginx
  rules: 
  - host : api.skogrv.pp.ua
    http:
      paths:
      - pathType: Prefix
        path: /
        backend: 
          service: 
            name: api-service
            port:
              number: 80
